--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -114,6 +114,8 @@
 
   <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
 
+  {% render 'shopify' %}
+
   {%- if settings.enable_ajax -%}
     {% include 'cart-popup' %}
   {%- endif -%}
